[gd_scene load_steps=7 format=2]

[ext_resource path="res://Art/card_slot.png" type="Texture" id=1]
[ext_resource path="res://Scripts/SceneScripts/CardSlot.gd" type="Script" id=2]
[ext_resource path="res://Fonts/alagard.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Art/UI/eye.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26, 35 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[node name="CardSlot" type="Node2D"]
script = ExtResource( 2 )

[node name="SpotSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = 40.0
margin_right = 20.0
margin_bottom = 54.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EyeSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -40 )
texture = ExtResource( 4 )

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="mouseEnter"]
[connection signal="mouse_exited" from="Area2D" to="." method="mouseExit"]
